@@ -3,6 +3,18 @@ plugins {
     id "io.freefair.lombok" version "5.3.0"
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 group 'com.djavorszky'
 version '0.1.0'
 
